{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 25,
  "lineage": "5ef92c73-e0d1-9ef5-97da-1a80d8852d53",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT_EIP",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-08c6a862e8e412e0d",
            "domain": "vpc",
            "id": "eipalloc-0609d3f25fff81c50",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0766386b1c8601ce5",
            "private_dns": "ip-10-0-1-234.ap-south-1.compute.internal",
            "private_ip": "10.0.1.234",
            "public_dns": "ec2-3-111-103-244.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.103.244",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW_VPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:113066798821:internet-gateway/igw-0514b3395f595f72c",
            "id": "igw-0514b3395f595f72c",
            "owner_id": "113066798821",
            "vpc_id": "vpc-0000a14d83e4d21b1"
          },
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "Target_Instances",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:113066798821:targetgroup/Target-Instances/41a727493075e164",
            "arn_suffix": "targetgroup/Target-Instances/41a727493075e164",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:113066798821:targetgroup/Target-Instances/41a727493075e164",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Target-Instances",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0000a14d83e4d21b1"
          },
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_Gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0609d3f25fff81c50",
            "id": "nat-0aafd49d412b26cef",
            "network_interface_id": "eni-0766386b1c8601ce5",
            "private_ip": "10.0.1.234",
            "public_ip": "3.111.103.244",
            "subnet_id": "subnet-025ab8c7646f3feb3"
          },
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_internet_gateway.IGW_VPC",
            "aws_subnet.pub_sub1",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRT",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:113066798821:route-table/rtb-01d9c07c19418ba25",
            "id": "rtb-01d9c07c19418ba25",
            "owner_id": "113066798821",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0aafd49d412b26cef",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0000a14d83e4d21b1"
          },
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_internet_gateway.IGW_VPC",
            "aws_nat_gateway.NAT_Gateway",
            "aws_subnet.pub_sub1",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PubSub_RT",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:113066798821:route-table/rtb-0738902c0ca455340",
            "id": "rtb-0738902c0ca455340",
            "owner_id": "113066798821",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0514b3395f595f72c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0000a14d83e4d21b1"
          },
          "dependencies": [
            "aws_internet_gateway.IGW_VPC",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_sub1_associsation",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0268f6a97d157ffec",
            "route_table_id": "rtb-0738902c0ca455340",
            "subnet_id": "subnet-025ab8c7646f3feb3"
          },
          "dependencies": [
            "aws_internet_gateway.IGW_VPC",
            "aws_route_table.PubSub_RT",
            "aws_subnet.pub_sub1",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_sub2_associsation",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e95e8ae10da2ec2",
            "route_table_id": "rtb-0738902c0ca455340",
            "subnet_id": "subnet-07cf016917ad66cfe"
          },
          "dependencies": [
            "aws_internet_gateway.IGW_VPC",
            "aws_route_table.PubSub_RT",
            "aws_subnet.pub_sub2",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_sub3_associsation",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004e4cf083521be6f",
            "route_table_id": "rtb-0738902c0ca455340",
            "subnet_id": "subnet-0a29b1788b9d412ef"
          },
          "dependencies": [
            "aws_internet_gateway.IGW_VPC",
            "aws_route_table.PubSub_RT",
            "aws_subnet.pub_sub3",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt_sub1_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e34062ba2c5a77e1",
            "route_table_id": "rtb-01d9c07c19418ba25",
            "subnet_id": "subnet-0190f05ab273b6bbb"
          },
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_internet_gateway.IGW_VPC",
            "aws_nat_gateway.NAT_Gateway",
            "aws_route_table.PrivateRT",
            "aws_subnet.pub_sub1",
            "aws_subnet.pvt_sub1",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt_sub2_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f88049bcf358d89",
            "route_table_id": "rtb-01d9c07c19418ba25",
            "subnet_id": "subnet-091c2c049eceda925"
          },
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_internet_gateway.IGW_VPC",
            "aws_nat_gateway.NAT_Gateway",
            "aws_route_table.PrivateRT",
            "aws_subnet.pub_sub1",
            "aws_subnet.pvt_sub2",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt_sub3_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cb9245820fec958",
            "route_table_id": "rtb-01d9c07c19418ba25",
            "subnet_id": "subnet-045312c13524818d1"
          },
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_internet_gateway.IGW_VPC",
            "aws_nat_gateway.NAT_Gateway",
            "aws_route_table.PrivateRT",
            "aws_subnet.pub_sub1",
            "aws_subnet.pvt_sub3",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Instance_SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:113066798821:security-group/sg-0d6bd6acd7d7174f9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d6bd6acd7d7174f9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0301ef4b31156143e"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240218092448815900000002",
            "name_prefix": "terraform-",
            "owner_id": "113066798821",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-009e76b28a706269d"
          },
          "dependencies": [
            "aws_security_group.Loadbalancer_SG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Loadbalancer_SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:113066798821:security-group/sg-0301ef4b31156143e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0301ef4b31156143e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240218091649591300000001",
            "name_prefix": "terraform-",
            "owner_id": "113066798821",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-009e76b28a706269d"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:113066798821:subnet/subnet-025ab8c7646f3feb3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-025ab8c7646f3feb3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "113066798821",
            "vpc_id": "vpc-0000a14d83e4d21b1"
          },
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:113066798821:subnet/subnet-07cf016917ad66cfe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-07cf016917ad66cfe",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "113066798821",
            "vpc_id": "vpc-0000a14d83e4d21b1"
          },
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:113066798821:subnet/subnet-0a29b1788b9d412ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0a29b1788b9d412ef",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "113066798821",
            "vpc_id": "vpc-0000a14d83e4d21b1"
          },
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_sub1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:113066798821:subnet/subnet-0190f05ab273b6bbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0190f05ab273b6bbb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "113066798821",
            "vpc_id": "vpc-0000a14d83e4d21b1"
          },
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_sub2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:113066798821:subnet/subnet-091c2c049eceda925",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-091c2c049eceda925",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "113066798821",
            "vpc_id": "vpc-0000a14d83e4d21b1"
          },
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_sub3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:113066798821:subnet/subnet-045312c13524818d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-045312c13524818d1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "113066798821",
            "vpc_id": "vpc-0000a14d83e4d21b1"
          },
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:113066798821:vpc/vpc-0000a14d83e4d21b1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fd461ccf30312780",
            "default_route_table_id": "rtb-08543e9bcf76c66d4",
            "default_security_group_id": "sg-0c70a21cad0b1dd85",
            "dhcp_options_id": "dopt-03e8ac421af557a5f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0000a14d83e4d21b1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08543e9bcf76c66d4",
            "owner_id": "113066798821",
            "tags": {
              "Name": "project_vpc"
            },
            "tags_all": {
              "Name": "project_vpc"
            }
          }
        }
      ]
    }
  ]
}